2008-10-02  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_network: Added support for multiple SNMP versions.

2008-09-08  Raul Mateos <raulofpandora@gmail.com>

	* README: Updated version and URL.
	
	* lib/PandoraFMS/Config.pm, pandora_package_installer, pandora_server_installer, 
	pandora_server.spec: Updated URL.
	
2008-09-24  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Added WMI namespace support.

2008-09-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added Export Server support.

2008-09-16  Sancho Lerena <slerena@artica.es>

	* util/plugin/ssh_pandoraplugin.sh: New remote SSH exec plugin.

	* util/plugin/ssh-exec_pandoraplugin.pl: Deleted old one because
	it has A LOT of problematic dependencies.

2008-09-15  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Use data timestamp when available (instead of
	  agent timestamp).

2008-09-08  Raul Mateos <raulofpandora@gmail.com>

	* util/pandora_db.pl: Updated year and URL.
	
	* util/pandora_dbstress.pl: Updated year and build.
	
	* pandora_*: Updated headers with build and new URL, better style

2008-09-03  Sancho Lerena <slerena@gmail.com>

	* pandora_server_installer: Added more info about some dependencies.

	* pandora_package_installer: The same.

	* util/pandora_db.pl: Fixed problem deleteing tevent table.

2008-09-01  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: Sending mail now replaces macros also 
	in the subject.

2008-08-28  Evi Vanoost <vanooste@rcbi.rochester.edu>
	
	* util/pandora2ast: Pandora to Asterisk script. Check README for how to
	install it and use it

2008-08-28  Manuel Arostegui <marostegui@artica.es>

	* conf/pandora_server.conf: Fixed small typo.

2008-08-26  Sancho Lerena <slerena@artica.es>

	* pandora_*installer: Minimal fix creating cront task in installer

2008-08-25  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Check for wmic execution errors.

2008-08-24  Sancho Lerena <slerena@gmail.com>
